feat(simulation): complete Phase 2.4 with turn-based system, multi-turn pathfinding, and comprehensive testing
Phase 2.4 Turn-Based Simulation Core:
- Add SimulationManager singleton managing Player→NPC→Processing turn cycle
- Implement ITurnEntity interface with action points system (3 AP/turn)
- Create TurnEvent ScriptableObject event system for decoupled notifications
- Add TurnCounterUI for turn state visualization
- Integrate PlayerController with turn system and action points

Multi-Turn Pathfinding System:
- Remove upfront AP consumption, add per-cell AP deduction in UpdateMovement()
- Implement auto-pause movement when AP depleted (AP=0)
- Implement auto-resume movement on next turn start
- Enable unlimited-turn pathfinding (paths span multiple turns automatically)
- Player can plan 10+ cell routes executed across multiple turns

GridVisualizer Real-Time Pathfinding Display:
- Add live pathfinding calculation for hovered cells
- Display distance (cells), total path cost, and turns required
- Show "Unreachable!" for invalid destinations
- Configurable info panel positioning (TopRight default, 250x180px)
- Calculate turns based on 3 AP per turn system

Assembly Definition Architecture:
- Create FollowMyFootsteps.asmdef (main game code assembly)
- Create FollowMyFootsteps.Editor.asmdef (editor-only scripts)
- Update FollowMyFootsteps.Tests.EditMode.asmdef (test assembly)
- Remove conflicting Grid.asmdef to fix compilation
- Establish clean compilation order: Main→Editor/Tests

Comprehensive Unit Testing (29 tests):
- SimulationManagerTests.cs (11 tests): Singleton, states, entity registration, pause
- TurnEventTests.cs (10 tests): Event raising, listeners, data propagation
- PlayerControllerTurnTests.cs (8 tests): ITurnEntity, AP consumption, turn lifecycle
- All tests passing with proper mocking and validation

Bug Fixes:
- Fix Camera namespace conflicts (Camera folder vs UnityEngine.Camera)
- Fix Input namespace conflicts (Input folder vs UnityEngine.Input)
-

--- a/Assets/_Project/Scripts/Entities/Editor/FollowMyFootsteps.Editor.asmdef
+++ b/Assets/_Project/Scripts/Entities/Editor/FollowMyFootsteps.Editor.asmdef
@@ -1,9 +1,7 @@
 {
-    "name": "FollowMyFootsteps.Tests.EditMode",
-    "rootNamespace": "FollowMyFootsteps.Tests.EditMode",
+    "name": "FollowMyFootsteps.Editor",
+    "rootNamespace": "FollowMyFootsteps.Editor",
     "references": [
-        "UnityEngine.TestRunner",
-        "UnityEditor.TestRunner",
         "FollowMyFootsteps"
     ],
     "includePlatforms": [
@@ -14,9 +12,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [
-        "UNITY_INCLUDE_TESTS"
-    ],
+    "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
 }
