--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.cinemachine": "3.1.5",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.test-framework": "1.6.0",
     "com.unity.modules.accessibility": "1.0.0",
