--- a/Assets/_Project/Tests/EditMode/FollowMyFootsteps.Tests.EditMode.asmdef
+++ b/Assets/_Project/Tests/EditMode/FollowMyFootsteps.Tests.EditMode.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "FollowMyFootsteps"
+        "FollowMyFootsteps",
+        "FollowMyFootsteps.Editor"
     ],
     "includePlatforms": [
         "Editor"
