fix: Entity positioning, hearing-range distress calls, and faction system
FIXES:
- Entity position reset bug: NPCs/Player were resetting to hex 0,2
  - Root cause: EntityFactory was parented to PlayerSpawner at (1.34, 2.43)
  - Fixed by unparenting NPCs before setting position
  - Fixed PlayerSpawner to not parent Player to itself
  - Fixed EntityStackVisualizer to only reset localPosition on child sprites

- FactionSettings serialization error: FactionRelationshipData struct issue
  - Changed FactionRelationshipData from struct to class for Unity serialization
  - Added runtime FactionSettings fallback if asset not found

FEATURES:
- Hearing-range distress calls now ignore faction relationships
  - Rationale: Can't identify friend/foe from sound alone
  - NPC must investigate location before determining if ally
  - New API: HasDistressToInvestigate, DistressInvestigationTarget
  - CompleteDistressInvestigation() called when arriving in vision range

- Vision-range distress calls still filter by faction (see ally directly)

NEW FILES:
- AlertPopup.cs, AlertPopupPool.cs: Visual distress/response popups
- NPCPathVisualizer.cs: Debug path visualization
- EntityStackVisualizer.cs: Multiple entities on same hex
- PHASE_5_ENTITY_STACKING.md: Entity stacking documentation

TESTS:
- Added hearing-range no-faction-filter tests
- Updated GetLoudestDistressCall test for new signature

DOCS:
- Updated PHASE_5_FACTION_ALLY_PROTECTION.md with:
  - Same faction = Always Allied rule
  - Cross-hostile faction relationships table
  - Vision vs Hearing faction filter differences
  - Investigation workflow diagram

--- a/Assets/_Project/Tests/EditMode/FollowMyFootsteps.Tests.EditMode.asmdef
+++ b/Assets/_Project/Tests/EditMode/FollowMyFootsteps.Tests.EditMode.asmdef
@@ -5,7 +5,8 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "FollowMyFootsteps",
-        "FollowMyFootsteps.Editor"
+        "FollowMyFootsteps.Editor",
+        "Unity.TextMeshPro"
     ],
     "includePlatforms": [
         "Editor"
